[package]
name = "geode_faucet"
description = "A contract for getting coin on the Geode network."
version = "0.1.0"
authors = ["Dr. Amy Messegee <support@blockandpurpose.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
]

ink-as-dependency = []
